<resources>
    <string name="app_name">FinalProject</string>
    <string name="song_title">No Song Playing</string>
    <string name="game_title">Beat the Beat</string>
    <string name="startsong_candy">Give Me Candy</string>
    <string name="score">00000000</string>
    <string name="playlist">Listen!</string>
    <string name="score_container">00000000</string>
    <string name="perfects">0</string>
    <string name="goods">0</string>
    <string name="misses">0</string>
    <string name="results_bg">0</string>
    <string name="perfects_string">PERFECTS</string>
    <string name="goods_string">GOODS</string>
    <string name="misses_string">MISSED</string>
    <string name="delay">0</string>
    <string name="left_hit_text">PERFECT</string>
    <string name="right_hit_text">PERFECT</string>
</resources>
