<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/results_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#999999">

    <ImageView
        android:id="@+id/results_bg"
        android:layout_width="685dp"
        android:layout_height="250dp"
        android:contentDescription="@string/results_bg"
        android:src="@drawable/results_bg"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/score_container"
        android:layout_width="300dp"
        android:layout_height="175dp"
        android:contentDescription="@string/score_container"
        android:src="@drawable/simple_menu"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/perfects"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:contentDescription="@string/perfects"
        android:src="@drawable/perfects"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />

    <ImageView
        android:id="@+id/goods"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:contentDescription="@string/goods"
        android:src="@drawable/goods"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <ImageView
        android:id="@+id/misses"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:contentDescription="@string/misses"
        android:src="@drawable/misses"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />

</android.support.constraint.ConstraintLayout>